--- a/src/index.html
+++ b/src/index.html
@@ -42,6 +42,7 @@
             <button class="tag" data-cat="video">Video</button>
         </div>
 
+        <h2>Lista de Productos</h2>
 
         <section class="productos vista-activa">
 
